updates do not look like took last night.  pushing again to generate content

--- a/hangman.html
+++ b/hangman.html
@@ -22,9 +22,8 @@
                     <span id="numletters">0</span> letters in this word
             </p>
             <h1 id="word">
-                <row>
-                    <div id="underlines">_________</div>
-                </row>
+
+                <div id="underlines">_,_,_,_</div>
             </h1>
             <div id="letters">
                 <a id="a">A</a>
@@ -57,10 +56,10 @@
             </div>
             </div>
         </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
         <script src="assets/javascript/letterClick.js"></script>
         <script src="assets/javascript/wordList.js"></script>
         <script src="assets/javascript/hangman1.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 </body>
 
 </html>
